--- a/Back-end/IdentityProjectBackEnd1/src/main/resources/application.properties
+++ b/Back-end/IdentityProjectBackEnd1/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=identity.ver.serv@gmail.com
-spring.mail.password=tltj csds tlww pbpq
+spring.mail.password=PASSWORD_HERE
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=*
